--- a/markup/pages/callback.html
+++ b/markup/pages/callback.html
@@ -11,8 +11,8 @@
         <div class="first-container">
             {{> first/first-2}}
             {{> header/header}}
-            
         </div>
+
         <div class="bread">
             <div class="wrapper">
                 <span>
@@ -33,15 +33,13 @@
             </div>
         </div>
 
-
         <div class="m-content">
             <div class="wrapper">
                 <div class="m-block px70 p30">
                     
-                    <form action="/ " class="callback form">
+                    <form action="" class="callback">
                         <p>Напишите нам*</p>
-                        <textarea name="textarea" class="m-textarea" rows="20" minLength="14" maxLength="1000"></textarea>
-
+                        <textarea class="m-textarea" name="textarea" rows="20"></textarea>
                         <p>Адрес электронной почты для ответа*</p>
                         <input type="text" name="mail" class="m-field">
 
