--- a/markup/pages/filter.html
+++ b/markup/pages/filter.html
@@ -213,7 +213,11 @@
                         </div>
                     </form>
                     
+                    <div class="m-title title_nothing">
+                        по вашему запросу не найдено ни одного товара
+                    </div>
                     <div class="filter__content">
+
 
                         <div class="filter__items">
                             {{> goods-item/goods-item}}
