--- a/markup/pages/thanx.html
+++ b/markup/pages/thanx.html
@@ -16,8 +16,19 @@
         {{> bread/bread-1}}
 
 
-        <div class="thanx-title">
-            Спасибо за регистрацию. Ждите одобрения!
+        
+        <div class="m-content">
+            <div class="wrapper">
+                <div class="m-block p30">
+                    <div class="thanx-title-title">
+                        Спасибо за регистрацию!
+                    </div>
+            
+                    <div class="thanx-desc">
+                        Ваша заявка будет рассмотрена в течение двух рабочих дней.
+                    </div>
+                </div>
+            </div>
         </div>
 
 
