--- a/markup/pages/filter.html
+++ b/markup/pages/filter.html
@@ -9,7 +9,9 @@
         %=symbols=%
 
         <div class="first-container">
+            <!-- при переходе на один из главных разделов этот блок удаляется  -->
             {{> first/first-2}}
+            <!-- при переходе на один из главных разделов этот блок удаляется  -->
             {{> header/header}}
         </div>
         {{> bread/bread-1}}
