правка с чеками на регистрации и в редактировании польщователя

--- a/markup/pages/reg.html
+++ b/markup/pages/reg.html
@@ -59,18 +59,18 @@
 
                                 <div class="form__how-cont">
                                     <label class="form__radio">
-                                        <input type="radio" checked class="check" value="private" name="check">
+                                        <input type="radio" checked class="check" value="chas" name="type">
                                         <div></div>
                                         <p class="ml20">Частное лицо</p>
                                     </label>
 
                                     <label class="form__radio">
-                                        <input type="radio"  class="check" value="legal" name="check">
+                                        <input type="radio"  class="check" value="ur" name="type">
                                         <div></div>
                                         <p class="ml20">Юридическое лицо</p>
                                     </label>
 
-                                    <div class="private-content hidden-content visible" data-open="private">
+                                    <div class="private-content hidden-content visible" data-open="chas">
                                         <p>Ссылка на сайт/группу, отображающую основной вид
                                             Вашей деятельности*</p>
                                         <input type="text" name="url" class="m-field r-field">                            
@@ -78,7 +78,7 @@
                                         <small>В группе совместных покупок активное число пользователей 
                                             должно быть не менее 500</small>
                                     </div>
-                                    <div class="legal-content hidden-content" data-open="legal">
+                                    <div class="legal-content hidden-content" data-open="ur">
                                         <div class="require form__block">
                                             <p>Наименование организации*</p>
                                             <input type="text" name="name_company" class="m-field m-fields">                            
